2025-07-10T01:26:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16183922046 # 700
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-10
* notice: last 14d: unq all: 6 14
* notice: prev accum: outdated-unq outdated-all / unq all: 1022 1502 / 1035 1515
* notice: next accum: outdated-unq outdated-all / unq all: 1023 1503 / 1037 1517
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-06-26] / [2025-07-09]

2025-07-09T01:26:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16158093598 # 699
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-09
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1021 1501 / 1034 1514
* notice: next accum: outdated-unq outdated-all / unq all: 1022 1502 / 1035 1515
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-25] / [2025-07-08]

2025-07-08T01:25:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16131657120 # 698
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-08
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1020 1500 / 1033 1513
* notice: next accum: outdated-unq outdated-all / unq all: 1021 1501 / 1034 1514
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-24] / [2025-07-07]

2025-07-07T01:38:37Z: