@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-10T01:26:30Z",
-  "count_outdated" : 1503,
-  "uniques_outdated" : 1023,
-  "count" : 1517,
-  "uniques" : 1037,
+  "timestamp" : "2025-07-11T01:27:30Z",
+  "count_outdated" : 1504,
+  "uniques_outdated" : 1024,
+  "count" : 1519,
+  "uniques" : 1039,
   "clones" : [
-    {
-      "timestamp": "2025-06-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-28T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-07-09T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-10T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
