@@ -1,12 +1,7 @@
 {
-  "count": 14,
-  "uniques": 6,
+  "count": 15,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2025-06-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-28T00:00:00Z",
       "count": 1,
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2025-07-09T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-07-10T00:00:00Z",
       "count": 2,
       "uniques": 2
     }
